--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -41,7 +41,20 @@ android {
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
+
+//        options {
+//            compilerArgs << "-Xlint:unchecked"
+//        }
     }
+
+//    compileOptions {
+//        sourceCompatibility JavaVersion.VERSION_1_8
+//        targetCompatibility JavaVersion.VERSION_1_8
+//    }
+//
+//    options {
+//        compilerArgs << "-Xlint:unchecked"
+//    }
 
     kotlinOptions {
         jvmTarget = '1.8'
@@ -60,6 +73,7 @@ android {
         targetSdkVersion flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
+        multiDexEnabled true
     }
 
     buildTypes {
@@ -86,7 +100,7 @@ dependencies {
     // When using the BoM, don't specify versions in Firebase dependencies
     implementation 'com.google.firebase:firebase-analytics'
 
-
+    implementation 'androidx.multidex:multidex:2.0.1'
     // Add the dependencies for any other desired Firebase products
     // https://firebase.google.com/docs/android/setup#available-libraries
 }
