--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,8 @@ dependencies:
   animated_text_kit: ^4.2.2
   firebase_core: ^2.15.0
   firebase_auth: ^4.7.2
-  cloud_firestore: ^4.8.4
+  cloud_firestore: ^4.8.5
+  modal_progress_hud_nsn: ^0.4.0
 
 dev_dependencies:
   flutter_test:
